--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="style.css" href="resources/css/style.css">
     </head>
 <body>
-    <h1>Disvover hidden place in the world around you</h1>
+    <h1>Discover hidden place in the world around you</h1>
     <p><a href="#" >Download Execursion (Coming Soon!)</a></p>
 </body>
 
